fix incorrect name in gh release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,6 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref_name }}
-          file: dist/$APP_NAME-${{ github.ref_name }}.exe
-          asset_name: $APP_NAME-${{ github.ref_name }}.exe
+          file: dist/${{ env.APP_NAME }}-${{ github.ref_name }}.exe
+          asset_name: ${{ env.APP_NAME }}-${{ github.ref_name }}.exe
           overwrite: true
